--- a/style.css
+++ b/style.css
@@ -4,15 +4,13 @@
     box-sizing: border-box;
 }
 
-.card-img-top{
-    width:100%;
-    height:200px;
-    object-fit:contain;
-}
-
-.logo{
+.card img{
     width:100px;
     height:100px;
     object-fit:contain;
 }
 
+footer {
+    position: absolute;
+    bottom: 0;
+}
