--- a/style.css
+++ b/style.css
@@ -1,16 +1,29 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 .card img{
-    width:100px;
-    height:100px;
+    width:100%;
+    height:300px;
     object-fit:contain;
+    padding-top: 5px;
+}
+.card{
+    object-fit: contain;
+    height: 500px;
+}
+
+.card-body{
+    bottom: 0;
+    position: absolute;
 }
 
 footer {
+    width: 100%;
     position: absolute;
     bottom: 0;
 }
+
+/* xampp/htdocs/php/EAZYCOZY */
