--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-/* *{
-    margin: 0;
+body{
+    overflow-x: hidden;
     padding: 0;
-    box-sizing: border-box; 
-} */
+    margin-left: 5px;
+    margin-right: 5px;
+}
 
 .logo{
     width:100px;
